Extract ICreateResult and related records to a separate file.

--- a/src/ExpenseExplorer.WebApp/Components/Pages/NewReceipt.razor
+++ b/src/ExpenseExplorer.WebApp/Components/Pages/NewReceipt.razor
@@ -1,4 +1,5 @@
 @page "/receipts/new"
+@using ExpenseExplorer.WebApp.Models
 @using ExpenseExplorer.WebApp.Services
 @inject ReceiptService ReceiptService
 @inject IStringLocalizer<NewReceipt> Localizer
