--- a/src/ExpenseExplorer.WebApp/Components/Pages/NewReceipt.razor
+++ b/src/ExpenseExplorer.WebApp/Components/Pages/NewReceipt.razor
@@ -42,15 +42,10 @@
 
     private async Task OnSave()
     {
-        ICreateResult response = await ReceiptService.CreateReceiptAsync(_store, _purchaseDate);
-        if (response is SuccessCreateResult success)
-        {
-            NavigationManager.NavigateTo($"/receipts/{success.Id}");
-        }
-        else if (response is ErrorCreateResult error)
-        {
-            await BusyDialog(error.Error);
-        }
+        await ReceiptService.CreateReceiptAsync(_store, _purchaseDate)
+            .SwitchAsync(
+                s => NavigationManager.NavigateTo($"/receipts/{s.Id}"),
+                e => BusyDialog(e.Error));
     }
 
     private async Task BusyDialog(string message)
