Refactor error dialog logic into a reusable DialogService extension method.

--- a/src/ExpenseExplorer.WebApp/Components/Pages/NewReceipt.razor
+++ b/src/ExpenseExplorer.WebApp/Components/Pages/NewReceipt.razor
@@ -63,25 +63,6 @@
             DialogService.Close();
         });
         
-        await DialogService.OpenAsync("", _ =>
-        {
-            return b =>
-            {
-                b.OpenElement(0, "RadzenRow");
-                b.OpenElement(1, "RadzenColumn");
-                b.AddAttribute(2, "Size", "12");
-                b.AddContent(3, message);
-                b.CloseElement();
-                b.CloseElement();
-            };
-            
-        }, new DialogOptions
-        {
-            ShowTitle = false,
-            Style = "min-height:auto;min-width:auto;width:auto",
-            CloseDialogOnEsc = false
-        });
-
-        return Unit.Instance;
+        return await DialogService.OpenErrorDialogAsync("", message);
     }
 }
