--- a/src/ExpenseExplorer.WebApp/Components/_Imports.razor
+++ b/src/ExpenseExplorer.WebApp/Components/_Imports.razor
@@ -11,3 +11,4 @@
 @using ExpenseExplorer.WebApp.Components
 @using Radzen
 @using Radzen.Blazor
+@using static ExpenseExplorer.WebApp.Helpers.HelperFunctions
