--- a/src/ExpenseExplorer.WebApp/Components/Pages/Receipts.razor
+++ b/src/ExpenseExplorer.WebApp/Components/Pages/Receipts.razor
@@ -92,7 +92,7 @@
     /// <inheritdoc />
     protected override async Task OnInitializedAsync()
     {
-        _stores = await ReceiptService.GetStores();
+        _stores = await ReceiptService.GetStoresAsync();
         await base.OnInitializedAsync();
     }
 
