--- a/src/ExpenseExplorer.WebApp/Components/Pages/Receipt.razor
+++ b/src/ExpenseExplorer.WebApp/Components/Pages/Receipt.razor
@@ -87,7 +87,7 @@
                 return Unit.Instance;
             });
 
-        _stores = await ReceiptService.GetStores();
+        _stores = await ReceiptService.GetStoresAsync();
         _store = _receipt?.Store ?? "";
         _purchaseDate = _receipt?.PurchaseDate ?? DateOnly.FromDateTime(DateTime.Today);
         _count = _receipt?.Purchases.Count() ?? 0;
@@ -97,7 +97,7 @@
 
     private async Task OnStoresLoadData(LoadDataArgs args)
     {
-        _stores = await ReceiptService.GetStores(args.Filter);
+        _stores = await ReceiptService.GetStoresAsync(args.Filter);
     }
 
     private async Task InsertRow()
